--- a/packages/tdb-react-components/package.json
+++ b/packages/tdb-react-components/package.json
@@ -45,7 +45,6 @@
   },
   "dependencies": {
     "@terminusdb/terminusdb-client": "^10.0.12",
-    "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "classnames": "^2.2.5",
     "codemirror": "^5.59.1",
@@ -75,8 +74,7 @@
     "react-textarea-autosize": "^8.3.0",
     "react-tooltip": "^4.2.10",
     "react-transition-group": "^4.4.1",
-    "react-use-dimensions": "^1.2.1",
-    "recharts": "^1.8.5"
+    "react-use-dimensions": "^1.2.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.4",
@@ -112,10 +110,10 @@
     "pre-commit": "^1.1.3",
     "rimraf": "^2.7.1",
     "style-loader": "^1.2.1",
-    "webpack": "^4.46.0",
-    "webpack-bundle-analyzer": "^3.6.0",
+    "webpack": "^5.74.0",
+    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.11.1"
+    "webpack-dev-server": "^4.9.3"
   },
   "license": "APACHE"
 }
