--- a/packages/react-worker/package.json
+++ b/packages/react-worker/package.json
@@ -80,8 +80,7 @@
     "react-test-renderer": "^16.12.0",
     "webpack": "^4.41.2",
     "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.2"
+    "webpack-cli": "^3.3.9"
   },
   "license": "APACHE",
   "gitHead": "aa081c438b01f552aaad466229baee35c0299ff5"
