--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -53,19 +53,19 @@ jobs:
         project_id: ${{ secrets.GCLOUD_PROJECT }}
         service_account_key: ${{ secrets.GCLOUD_SERVICE_ACCOUNT_KEY }}
         export_default_credentials: true
-#    - name: Upload tdb-dashboard dev
-#      if: ${{ github.event_name != 'pull_request' && github.ref == 'refs/heads/main' }}
-#      run: gsutil -h "Cache-Control:public, max-age=60" cp -r packages/tdb-dashboard/dist/* "gs://${{ secrets.GCLOUD_DEV_BUCKET }}/"
-#    - name: Upload tdb-dashboard prod
-#      if: ${{ github.event_name != 'pull_request' && startsWith(github.ref, 'refs/tags/v') }}
-#      run: gsutil -h "Cache-Control:public, max-age=60" cp -r packages/tdb-dashboard/dist/* "gs://${{ secrets.GCLOUD_BUCKET }}/"
-#    - name: Clean cloudflare cache
-#      if: ${{ github.event_name != 'pull_request' }}
-#      run: python3 .ci/clean_cloudflare_cache.py ${{ github.ref }}
-#      env:
-#        CLOUDFLARE_EMAIL: ${{ secrets.CLOUDFLARE_EMAIL }}
-#        CLOUDFLARE_ZONE: ${{ secrets.CLOUDFLARE_ZONE }}
-#        CLOUDFLARE_API_KEY: ${{ secrets.CLOUDFLARE_API_KEY }}
+    - name: Upload tdb-dashboard dev
+      if: ${{ github.event_name != 'pull_request' && github.ref == 'refs/heads/main' }}
+      run: gsutil -h "Cache-Control:public, max-age=60" cp -r packages/tdb-dashboard/dist/* "gs://${{ secrets.GCLOUD_DEV_BUCKET }}/"
+    - name: Upload tdb-dashboard prod
+      if: ${{ github.event_name != 'pull_request' && startsWith(github.ref, 'refs/tags/v') }}
+      run: gsutil -h "Cache-Control:public, max-age=60" cp -r packages/tdb-dashboard/dist/* "gs://${{ secrets.GCLOUD_BUCKET }}/"
+    - name: Clean cloudflare cache
+      if: ${{ github.event_name != 'pull_request' }}
+      run: python3 .ci/clean_cloudflare_cache.py ${{ github.ref }}
+      env:
+        CLOUDFLARE_EMAIL: ${{ secrets.CLOUDFLARE_EMAIL }}
+        CLOUDFLARE_ZONE: ${{ secrets.CLOUDFLARE_ZONE }}
+        CLOUDFLARE_API_KEY: ${{ secrets.CLOUDFLARE_API_KEY }}
 
   build_for_local:
     name: Build local dashboard
