--- a/packages/tdb-react-components/package.json
+++ b/packages/tdb-react-components/package.json
@@ -25,9 +25,8 @@
   ],
   "scripts": {
     "build-es6": "rimraf es6 && cross-env NODE_ENV=es6 babel ./src -d es6 --extensions '.js' && babel ./src/css/less --out-dir es6/css/less --copy-files",
-    "build": "npm run build-es6 && rimraf dist && webpack --production ",
-    "start01": "webpack serve --mode development  --open --progress --port 3030 --host localhost --entry ./src --config ./webpack_dev.config.js --history-api-fallback",
-    "start": "webpack-dev-server --progress --port 3030 --host localhost --content-base demo --inline --config demo/webpack.config.js",
+    "build": "npm run build-es6 && rimraf dist && webpack",
+    "start": "webpack serve --mode development  --open --progress --port 3030 --host localhost --entry ./src --config ./webpack_dev.config.js --history-api-fallback",
     "test": "echo 'TODO: There should be tests created'",
     "lint": "eslint src",
     "autofix": "eslint src --fix"
@@ -74,7 +73,8 @@
     "react-textarea-autosize": "^8.3.0",
     "react-tooltip": "^4.2.10",
     "react-transition-group": "^4.4.1",
-    "react-use-dimensions": "^1.2.1"
+    "react-use-dimensions": "^1.2.1",
+    "recharts": "^1.8.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.4",
@@ -92,28 +92,25 @@
     "@babel/preset-typescript": "^7.6.0",
     "@babel/runtime": "^7.6.3",
     "babel-eslint": "^10.0.3",
-    "babel-loader": "^8.0.0",
+    "babel-loader": "^8.2.5",
     "babel-plugin-lodash": "^3.3.0",
     "babel-preset-airbnb": "^2.6.0",
     "cross-env": "^5.2.1",
-    "css-loader": "^3.6.0",
-    "dotenv-webpack": "^1.7.0",
+    "css-loader": "^6.7.1",
+    "dotenv-webpack": "^8.0.0",
     "eslint": "^5.6.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.0",
     "eslint-plugin-react": "^7.22.0",
-    "json-loader": "^0.5.7",
     "less": "^3.13.1",
-    "less-loader": "^7.2.1",
-    "mini-css-extract-plugin": "^0.9.0",
+    "less-loader": "^11.0.0",
+    "mini-css-extract-plugin": "^2.6.1",
     "pre-commit": "^1.1.3",
     "rimraf": "^2.7.1",
     "style-loader": "^1.2.1",
     "webpack": "^5.74.0",
-    "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^4.9.3"
+    "webpack-cli": "^4.10.0"
   },
   "license": "APACHE"
 }
