--- a/packages/tdb-react-layout/package.json
+++ b/packages/tdb-react-layout/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^16.10.3"
   },
   "dependencies": {
+    "@terminusdb-live/react-worker": "*",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
