--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "./packages/react-worker",
     "./packages/tdb-react-layout",
     "./packages/tdb-access-control-component",
-    "./packages/tdb-dashboard"
+    "./packages/tdb-dashboard",
+    "../terminusdb-documents-ui/src/index.js"
   ]
 }
