--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "./packages/react-worker",
     "./packages/tdb-react-layout",
     "./packages/tdb-access-control-component",
-    "./packages/tdb-dashboard",
-    "./packages/tdb-documents-ui"
+    "./packages/tdb-documents-ui",
+    "./packages/tdb-dashboard"
   ]
 }
