--- a/packages/react-worker/.babelrc
+++ b/packages/react-worker/.babelrc
@@ -1,7 +1,6 @@
 {
-    "presets": ["@babel/preset-env", "@babel/preset-react"],
-    "plugins": ["@babel/plugin-proposal-class-properties",
-                 "@babel/plugin-proposal-export-default-from",
-                 "@babel/plugin-transform-react-jsx",
-                 "@babel/plugin-transform-regenerator","@babel/plugin-transform-runtime"]
+    "sourceType": "unambiguous",
+    "presets": [
+      ["@babel/preset-env", {"corejs": "3.25", "useBuiltIns": "entry"}]
+    ]
   }
