--- a/packages/react-worker/package.json
+++ b/packages/react-worker/package.json
@@ -40,46 +40,29 @@
     "react-dom": "^16.10.3"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "classnames": "^2.2.5",
-    "prop-types": "^15.6.0"
+    "react": "^18.2.0",
+    "react-router-dom": "^6.4.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.14.5",
-    "@babel/core": "^7.13.10",
-    "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "@babel/plugin-proposal-export-default-from": "^7.12.13",
-    "@babel/plugin-transform-react-jsx": "^7.13.12",
-    "@babel/plugin-transform-regenerator": "^7.12.13",
-    "@babel/plugin-transform-runtime": "^7.13.10",
-    "@babel/preset-env": "^7.13.12",
-    "@babel/preset-react": "^7.12.13",
-    "@babel/runtime-corejs2": "^7.13.10",
-    "babel-eslint": "^10.0.3",
-    "babel-loader": "^8.0.0",
-    "babel-plugin-istanbul": "^5.2.0",
-    "babel-plugin-lodash": "^3.3.0",
-    "babel-preset-airbnb": "^2.6.0",
-    "chai": "^4.2.0",
-    "chai-enzyme": "^1.0.0-beta.1",
-    "cross-env": "^5.2.1",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.15.1",
-    "eslint": "^5.6.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.0",
-    "eslint-plugin-react": "^7.16.0",
-    "eslint-plugin-react-hooks": "^2.3.0",
-    "json-loader": "^0.5.7",
-    "pre-commit": "^1.1.3",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "react-hot-loader": "^1.3.0",
-    "react-router-dom": "^5.1.2",
-    "react-test-renderer": "^16.12.0",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.9"
+    "@babel/core": "^7.19.1",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-export-default-from": "^7.18.10",
+    "@babel/plugin-transform-react-jsx": "^7.19.0",
+    "@babel/plugin-transform-runtime": "^7.19.1",
+    "@babel/preset-env": "^7.19.1",
+    "@babel/preset-react": "^7.18.6",
+    "babel-loader": "^8.2.5",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.7.1",
+    "dotenv-webpack": "^8.0.1",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
+    "less-loader": "^11.0.0",
+    "mini-css-extract-plugin": "^2.6.1",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.0"
   },
   "license": "APACHE",
   "gitHead": "aa081c438b01f552aaad466229baee35c0299ff5"
