--- a/packages/tdb-dashboard/.babelrc
+++ b/packages/tdb-dashboard/.babelrc
@@ -1,17 +1,7 @@
 {
-    "presets": ["@babel/preset-env", "@babel/preset-react"],
     "sourceType": "unambiguous",
-    "plugins": ["@babel/plugin-transform-react-jsx",
-        "@babel/plugin-proposal-export-default-from","@babel/plugin-transform-regenerator",
-      ["@babel/plugin-transform-runtime"]]
+    "presets": [
+      ["@babel/preset-env", {"corejs": "3.25", "useBuiltIns": "entry"}]
+    ]
   }
-
- /* {
-    "presets": ["@babel/preset-env", "@babel/preset-react"],
-    "plugins": ["@babel/plugin-proposal-class-properties",
-                 "@babel/plugin-proposal-export-default-from",
-                 "@babel/plugin-transform-react-jsx",
-                 "@babel/plugin-transform-regenerator",
-                 "@babel/plugin-transform-runtime"]
-  }*/
 
