--- a/packages/tdb-dashboard/package.json
+++ b/packages/tdb-dashboard/package.json
@@ -44,9 +44,7 @@
   },
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.19.3",
-    "@terminusdb/terminusdb-access-control-component": "^0.0.13",
-    "@terminusdb/terminusdb-client": "^10.0.14",
-    "@terminusdb/terminusdb-documents-ui": "^1.0.8",
+    "@terminusdb/terminusdb-client": "^10.0.19",
     "axios": "^0.21.1",
     "classnames": "^2.2.5",
     "codemirror": "^5.64.0",
@@ -85,30 +83,25 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.5",
-    "@babel/plugin-proposal-class-properties": "^7.16.5",
-    "@babel/plugin-proposal-export-default-from": "^7.16.5",
-    "@babel/plugin-transform-react-jsx": "^7.16.5",
-    "@babel/plugin-transform-regenerator": "^7.16.5",
-    "@babel/plugin-transform-runtime": "^7.16.5",
-    "@babel/preset-env": "^7.16.5",
-    "@babel/preset-react": "^7.16.5",
-    "@babel/runtime-corejs2": "^7.16.5",
-    "babel-loader": "^8.2.2",
-    "copy-webpack-plugin": "^9.1.0",
-    "css-loader": "^5.2.3",
-    "cypress": "^9.7.0",
-    "cypress-mailslurp": "^1.3.0",
+    "@babel/core": "^7.19.1",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-export-default-from": "^7.18.10",
+    "@babel/plugin-transform-react-jsx": "^7.19.0",
+    "@babel/plugin-transform-runtime": "^7.19.1",
+    "@babel/preset-env": "^7.19.1",
+    "@babel/preset-react": "^7.18.6",
+    "babel-loader": "^8.2.5",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.7.1",
+    "dotenv-webpack": "^8.0.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
-    "less": "^4.1.1",
-    "less-loader": "^8.1.1",
-    "mini-css-extract-plugin": "^1.6.2",
-    "react-hot-loader": "^4.13.0",
-    "style-loader": "^2.0.0",
-    "webpack": "^5.31.0",
-    "webpack-bundle-analyzer": "^4.4.0",
-    "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^4.6.0"
+    "less-loader": "^11.0.0",
+    "mini-css-extract-plugin": "^2.6.1",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.0"
   },
   "license": "APACHE",
   "gitHead": "aa081c438b01f552aaad466229baee35c0299ff5"
