--- a/packages/tdb-documents-ui/.babelrc
+++ b/packages/tdb-documents-ui/.babelrc
@@ -1,8 +1,6 @@
 {
-  "presets": ["@babel/preset-env", "@babel/preset-react"],
   "sourceType": "unambiguous",
-  "plugins": ["@babel/plugin-proposal-class-properties",
-  			 "@babel/plugin-proposal-export-default-from",
-  			 "@babel/plugin-transform-react-jsx",
-         "@babel/plugin-syntax-jsx"]
+  "presets": [
+    ["@babel/preset-env", {"corejs": "3.25", "useBuiltIns": "entry"}]
+  ]
 }
