--- a/packages/tdb-documents-ui/package.json
+++ b/packages/tdb-documents-ui/package.json
@@ -37,58 +37,32 @@
     "react-dom": "^16.10.3"
   },
   "devDependencies": {
-    "@babel/cli": "^7.17.3",
-    "@babel/core": "^7.17.5",
-    "@babel/plugin-proposal-class-properties": "^7.16.7",
-    "@babel/plugin-proposal-decorators": "^7.17.2",
-    "@babel/plugin-proposal-export-default-from": "^7.16.7",
-    "@babel/plugin-proposal-export-namespace-from": "^7.16.7",
-    "@babel/plugin-proposal-function-bind": "^7.16.7",
-    "@babel/plugin-proposal-object-rest-spread": "^7.17.3",
-    "@babel/plugin-transform-react-jsx": "^7.17.3",
-    "@babel/plugin-transform-runtime": "^7.17.0",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
-    "@babel/preset-typescript": "^7.16.7",
-    "@babel/runtime": "^7.17.2",
-    "@types/leaflet": "^1.7.8",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^10.0.3",
-    "babel-loader": "^8.2.3",
-    "babel-plugin-lodash": "^3.3.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-airbnb": "^2.6.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "cross-env": "^5.2.1",
-    "css-loader": "^3.6.0",
-    "dotenv-webpack": "^7.1.1",
-    "eslint": "^8.9.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jsx-a11y": "^6.1.0",
-    "eslint-plugin-react": "^7.28.0",
-    "jest": "^27.4.7",
-    "jsdom": "^19.0.0",
-    "json-loader": "^0.5.7",
-    "less": "^3.13.1",
-    "less-loader": "^7.2.1",
-    "mini-css-extract-plugin": "^2.6.0",
-    "pre-commit": "^1.1.3",
-    "rimraf": "^2.7.1",
-    "style-loader": "^1.2.1",
-    "webpack": "^5.73.0",
-    "webpack-bundle-analyzer": "^4.5.0",
+    "@babel/core": "^7.19.1",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-export-default-from": "^7.18.10",
+    "@babel/plugin-transform-react-jsx": "^7.19.0",
+    "@babel/plugin-transform-runtime": "^7.19.1",
+    "@babel/preset-env": "^7.19.1",
+    "@babel/preset-react": "^7.18.6",
+    "babel-loader": "^8.2.5",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.7.1",
+    "dotenv-webpack": "^8.0.1",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
+    "less-loader": "^11.0.0",
+    "mini-css-extract-plugin": "^2.6.1",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.9.2"
+    "webpack-dev-server": "^4.11.0"
   },
   "dependencies": {
     "@terminusdb/rjsf-core": "^4.0.5",
-    "@terminusdb/terminusdb-client": "^10.0.10",
+    "@terminusdb/terminusdb-client": "^10.0.19",
     "babel-jest": "^27.4.6",
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.1",
-    "file-loader": "^6.2.0",
     "highlight.js": "^11.6.0",
     "img-loader": "^4.0.0",
     "leaflet": "^1.7.1",
@@ -109,7 +83,6 @@
     "react-scripts": "^5.0.1",
     "react-select": "^5.2.2",
     "react-syntax-highlighter": "^15.5.0",
-    "react-test-renderer": "^17.0.2",
-    "regenerator-runtime": "^0.13.9"
+    "react-test-renderer": "^17.0.2"
   }
 }
