--- a/packages/tdb-react-components/.babelrc
+++ b/packages/tdb-react-components/.babelrc
@@ -1,6 +1,6 @@
 {
-  "presets": ["@babel/preset-env", "@babel/preset-react"],
-  "plugins": ["@babel/plugin-proposal-class-properties",
-  			 "@babel/plugin-proposal-export-default-from",
-  			 "@babel/plugin-transform-react-jsx"]
+  "sourceType": "unambiguous",
+  "presets": [
+    ["@babel/preset-env", {"corejs": "3.25", "useBuiltIns": "entry"}]
+  ]
 }
