--- a/packages/tdb-react-components/package.json
+++ b/packages/tdb-react-components/package.json
@@ -43,7 +43,7 @@
     "react-dom": "^16.0.0"
   },
   "dependencies": {
-    "@terminusdb/terminusdb-client": "^10.0.14",
+    "@terminusdb/terminusdb-client": "^10.0.19",
     "bootstrap": "^4.5.3",
     "classnames": "^2.2.5",
     "codemirror": "^5.59.1",
@@ -77,40 +77,25 @@
     "recharts": "^1.8.5"
   },
   "devDependencies": {
-    "@babel/cli": "^7.6.4",
-    "@babel/core": "^7.6.4",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/plugin-proposal-decorators": "^7.12.12",
-    "@babel/plugin-proposal-export-default-from": "^7.7.4",
-    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
-    "@babel/plugin-proposal-function-bind": "^7.0.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
-    "@babel/plugin-transform-react-jsx": "^7.12.12",
-    "@babel/plugin-transform-runtime": "^7.6.2",
-    "@babel/preset-env": "^7.6.3",
-    "@babel/preset-react": "^7.6.3",
-    "@babel/preset-typescript": "^7.6.0",
-    "@babel/runtime": "^7.6.3",
-    "babel-eslint": "^10.0.3",
+    "@babel/core": "^7.19.1",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-export-default-from": "^7.18.10",
+    "@babel/plugin-transform-react-jsx": "^7.19.0",
+    "@babel/plugin-transform-runtime": "^7.19.1",
+    "@babel/preset-env": "^7.19.1",
+    "@babel/preset-react": "^7.18.6",
     "babel-loader": "^8.2.5",
-    "babel-plugin-lodash": "^3.3.0",
-    "babel-preset-airbnb": "^2.6.0",
-    "cross-env": "^5.2.1",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
-    "dotenv-webpack": "^8.0.0",
-    "eslint": "^5.6.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.0",
-    "eslint-plugin-react": "^7.22.0",
-    "less": "^3.13.1",
+    "dotenv-webpack": "^8.0.1",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
     "less-loader": "^11.0.0",
     "mini-css-extract-plugin": "^2.6.1",
-    "pre-commit": "^1.1.3",
-    "rimraf": "^2.7.1",
-    "style-loader": "^1.2.1",
+    "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.0"
   },
   "license": "APACHE"
 }
