--- a/packages/tdb-react-layout/package.json
+++ b/packages/tdb-react-layout/package.json
@@ -44,10 +44,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@themesberg/react-bootstrap": "^1.4.1",
-    "classnames": "^2.2.5",
-    "core-js": "^3.4.2",
-    "css-loader": "^5.2.0",
+    "@themesberg/react-bootstrap": "^1.4.1", 
     "prop-types": "^15.6.0",
     "re-resizable": "^6.9.0",
     "react-bootstrap": "^1.6.5",
@@ -55,52 +52,28 @@
     "react-color": "^2.19.3",
     "react-sizeme": "^3.0.1",
     "react-split-pane": "^0.1.92",
-    "style-loader": "^2.0.0"
+    "react": "^18.2.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.6.4",
-    "@babel/core": "^7.6.4",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/plugin-proposal-decorators": "^7.6.0",
-    "@babel/plugin-proposal-export-default-from": "^7.7.4",
-    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
-    "@babel/plugin-proposal-function-bind": "^7.0.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
-    "@babel/plugin-transform-react-jsx": "^7.13.12",
-    "@babel/plugin-transform-regenerator": "^7.12.13",
-    "@babel/plugin-transform-runtime": "^7.6.2",
-    "@babel/polyfill": "^7.6.0",
-    "@babel/preset-env": "^7.6.3",
-    "@babel/preset-react": "^7.6.3",
-    "@babel/preset-typescript": "^7.6.0",
-    "@babel/runtime": "^7.6.3",
-    "babel-eslint": "^10.0.3",
-    "babel-loader": "^8.0.0",
-    "babel-plugin-istanbul": "^5.2.0",
-    "babel-plugin-lodash": "^3.3.0",
-    "babel-preset-airbnb": "^2.6.0",
-    "chai": "^4.2.0",
-    "chai-enzyme": "^1.0.0-beta.1",
-    "cross-env": "^5.2.1",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.15.1",
-    "eslint": "^5.6.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.0",
-    "eslint-plugin-react": "^7.16.0",
-    "eslint-plugin-react-hooks": "^2.3.0",
-    "json-loader": "^0.5.7",
-    "pre-commit": "^1.1.3",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "react-hot-loader": "^1.3.0",
-    "react-router-dom": "^5.1.2",
-    "react-test-renderer": "^16.12.0",
-    "webpack": "^4.41.2",
-    "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^4.9.3"
+    "@babel/core": "^7.19.1",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-export-default-from": "^7.18.10",
+    "@babel/plugin-transform-react-jsx": "^7.19.0",
+    "@babel/plugin-transform-runtime": "^7.19.1",
+    "@babel/preset-env": "^7.19.1",
+    "@babel/preset-react": "^7.18.6",
+    "babel-loader": "^8.2.5",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.7.1",
+    "dotenv-webpack": "^8.0.1",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
+    "less-loader": "^11.0.0",
+    "mini-css-extract-plugin": "^2.6.1",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.0"
   },
   "license": "APACHE",
   "gitHead": "aa081c438b01f552aaad466229baee35c0299ff5"
