--- a/packages/tdb-documents-ui/package.json
+++ b/packages/tdb-documents-ui/package.json
@@ -76,7 +76,7 @@
     "mini-css-extract-plugin": "^2.6.0",
     "pre-commit": "^1.1.3",
     "rimraf": "^2.7.1",
-    "style-loader": "^1.2.1",
+    "style-loader": "^1.3.0",
     "webpack": "^5.73.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.10.0",
@@ -110,6 +110,7 @@
     "react-select": "^5.2.2",
     "react-syntax-highlighter": "^15.5.0",
     "react-test-renderer": "^17.0.2",
-    "regenerator-runtime": "^0.13.9"
+    "regenerator-runtime": "^0.13.9",
+    "url-loader": "^4.1.1"
   }
 }
