commiting diff view till tests

--- a/packages/tdb-dashboard/package.json
+++ b/packages/tdb-dashboard/package.json
@@ -52,6 +52,7 @@
     "dotenv": "^9.0.2",
     "dotenv-webpack": "^7.0.2",
     "file-loader": "^6.2.0",
+    "history": "^5.3.0",
     "moment": "^2.29.1",
     "papaparse": "^5.3.0",
     "postcss-loader": "^5.3.0",
@@ -96,7 +97,7 @@
     "dotenv-webpack": "^8.0.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
-    "less-loader": "^11.0.0",
+    "less-loader": "^11.1.0",
     "mini-css-extract-plugin": "^2.6.1",
     "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
