--- a/packages/tdb-documents-ui/package.json
+++ b/packages/tdb-documents-ui/package.json
@@ -69,12 +69,24 @@
     "webpack-dev-server": "^4.11.0"
   },
   "dependencies": {
+    "@babel/runtime": "^7.20.1",
+    "@codemirror/commands": "^6.1.2",
+    "@codemirror/lang-html": "^6.1.3",
+    "@codemirror/lang-markdown": "^6.0.4",
+    "@codemirror/language-data": "^6.1.0",
+    "@codemirror/state": "^6.1.2",
+    "@codemirror/theme-one-dark": "^6.1.0",
     "@terminusdb/rjsf-core": "^4.0.5",
     "@terminusdb/terminusdb-client": "^10.0.19",
+    "@uiw/codemirror-extensions-basic-setup": "^4.12.4",
+    "@uiw/react-codemirror": "^4.12.4",
+    "@uiw/react-markdown-preview": "^4.1.5",
     "acorn": "^8.8.0",
     "bootstrap": "^5.1.3",
+    "codemirror": "^6.0.1",
     "dotenv": "^16.0.1",
     "highlight.js": "^11.6.0",
+    "html-react-parser": "^3.0.4",
     "img-loader": "^4.0.0",
     "leaflet": "^1.7.1",
     "leaflet-ant-path": "^1.3.0",
@@ -84,6 +96,7 @@
     "react": "^16.10.3",
     "react-bootstrap": "^2.1.2",
     "react-bootstrap-typeahead": "^6.0.0-alpha.9",
+    "react-codemirror2": "^7.2.1",
     "react-diff-viewer": "^3.1.1",
     "react-dom": "^16.10.3",
     "react-icons": "^4.3.1",
@@ -91,6 +104,7 @@
     "react-jsonschema-form": "^1.8.1",
     "react-jsonschema-form-extras": "^0.9.67",
     "react-leaflet": "^3.2.5",
+    "react-markdown": "^8.0.3",
     "react-scripts": "^5.0.1",
     "react-select": "^5.2.2",
     "react-syntax-highlighter": "^15.5.0",
