--- a/packages/tdb-dashboard/package.json
+++ b/packages/tdb-dashboard/package.json
@@ -97,6 +97,7 @@
     "dotenv-webpack": "^8.0.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "mini-css-extract-plugin": "^2.6.1",
     "style-loader": "^3.3.1",
