--- a/packages/react-worker/package.json
+++ b/packages/react-worker/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@terminusdb-live/react-worker",
   "version": "0.1.1",
+  "private": true,
   "description": "react hook library for manage terminusdb live workers",
   "main": "src/index",
   "module": "es6/index",
