--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -97,3 +97,22 @@ jobs:
       uses: ncipollo/release-action@v1.10.0
       with:
         artifacts: packages/tdb-dashboard/dist/release.tar.gz
+
+  npm:
+    name: Publish packages to npm
+    runs-on: ubuntu-latest
+    needs: [setup-build-publish-deploy]
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v2
+      with:
+        node-version: 16
+    - name: Build packages
+      run: npm i && npm run build --ws
+    - name: Publish workspaces
+      if: ${{ github.event_name != 'pull_request' && startsWith(github.ref, 'refs/tags/v') }}
+      env:
+        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      run: npm run publish --ws
