--- a/packages/tdb-react-components/.babelrc
+++ b/packages/tdb-react-components/.babelrc
@@ -1,6 +1,10 @@
 {
   "sourceType": "unambiguous",
   "presets": [
-    ["@babel/preset-env", {"corejs": "3.25", "useBuiltIns": "entry"}]
+    ["@babel/preset-env", {"corejs": "3.25", "useBuiltIns": "entry"}],
+    ["@babel/preset-react"]
+  ],
+  "plugins": [
+    "@babel/plugin-proposal-export-default-from"
   ]
 }
