--- a/packages/tdb-documents-ui/package.json
+++ b/packages/tdb-documents-ui/package.json
@@ -62,6 +62,7 @@
     "dotenv-webpack": "^8.0.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "less": "^4.1.3",
     "less-loader": "^11.0.0",
     "mini-css-extract-plugin": "^2.6.1",
     "style-loader": "^3.3.1",
@@ -79,11 +80,11 @@
     "@codemirror/theme-one-dark": "^6.1.0",
     "@terminusdb/rjsf-core": "^4.0.5",
     "@terminusdb/terminusdb-client": "^10.0.23",
-    "babel-jest": "^27.4.6",
     "@uiw/codemirror-extensions-basic-setup": "^4.12.4",
     "@uiw/react-codemirror": "^4.12.4",
     "@uiw/react-markdown-preview": "^4.1.5",
     "acorn": "^8.8.0",
+    "babel-jest": "^27.4.6",
     "bootstrap": "^5.1.3",
     "codemirror": "^6.0.1",
     "cypress-plugin-snapshots": "^1.4.4",
