--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -109,6 +109,7 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: 16
+        registry-url: 'https://registry.npmjs.org'
     - name: Build packages
       run: npm i && npm run build --ws
     - name: Publish workspaces
