--- a/packages/tdb-dashboard/package.json
+++ b/packages/tdb-dashboard/package.json
@@ -57,13 +57,15 @@
     "papaparse": "^5.3.0",
     "postcss-loader": "^5.3.0",
     "prop-types": "^15.6.0",
-    "re-resizable": "^6.9.0",
+    "re-resizable": "^6.9.9",
     "react": "^16.10.3",
     "react-accessible-accordion": "^3.3.4",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-bootstrap": "^1.5.2",
     "react-codemirror2": "^7.2.1",
+    "react-collapsed": "^3.6.0",
     "react-collapsible-component": "^1.3.4",
+    "react-color": "^2.19.3",
     "react-dates": "^21.8.0",
     "react-dom": "^16.10.3",
     "react-icons": "^4.2.0",
