--- a/packages/tdb-dashboard/package.json
+++ b/packages/tdb-dashboard/package.json
@@ -43,16 +43,32 @@
     "react-dom": "^16.10.3"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.2",
     "@auth0/auth0-spa-js": "^1.19.3",
+    "@emotion/styled": "^11.10.5",
+    "@graphiql/react": "^0.15.0",
+    "@graphiql/toolkit": "^0.8.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.61",
+    "@material-ui/pickers": "^3.3.10",
+    "@mui/material": "^5.11.1",
     "@terminusdb/terminusdb-client": "^10.0.23",
     "axios": "^0.21.1",
     "classnames": "^2.2.5",
     "codemirror": "^5.64.0",
+    "codemirror-graphql": "^2.0.2",
     "date-fns": "^2.27.0",
     "dotenv": "^9.0.2",
     "dotenv-webpack": "^7.0.2",
     "file-loader": "^6.2.0",
+    "graphiql": "^2.2.0",
+    "graphql": "^15.8.0",
+    "graphql-formatter": "^1.0.3",
+    "graphql-react": "^20.0.0",
+    "graphql-ws": "^5.11.2",
     "history": "^5.3.0",
+    "material-ui-confirm": "^3.0.7",
     "moment": "^2.29.1",
     "papaparse": "^5.3.0",
     "postcss-loader": "^5.3.0",
@@ -61,6 +77,7 @@
     "react": "^16.10.3",
     "react-accessible-accordion": "^3.3.4",
     "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-awesome-query-builder": "^5.4.0",
     "react-bootstrap": "^1.5.2",
     "react-codemirror2": "^7.2.1",
     "react-collapsed": "^3.6.0",
