--- a/packages/tdb-dashboard/package.json
+++ b/packages/tdb-dashboard/package.json
@@ -29,7 +29,8 @@
     "test": "exit 0",
     "lint": "eslint src",
     "autofix": "eslint src --fix",
-    "cypress": "npx cypress open"
+    "cypress": "npx cypress open",
+    "cypress-local": "npx cypress open --config cypress.config_local.js"
   },
   "pre-commit": [],
   "pre-push": [
@@ -39,7 +40,7 @@
   "repository": {},
   "author": "terminusdb group",
   "dependencies": {
-    "@apollo/client": "^3.7.2",
+    "@apollo/client": "^3.7.1",
     "@auth0/auth0-spa-js": "^1.19.3",
     "@emotion/styled": "^11.10.5",
     "@graphiql/toolkit": "^0.8.0",
@@ -76,7 +77,7 @@
     "react-accessible-accordion": "^3.3.4",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-awesome-query-builder": "^5.4.0",
-    "react-bootstrap": "^1.5.2",
+    "react-bootstrap": "^2.7.0",
     "react-codemirror2": "^7.2.1",
     "react-collapsed": "^3.6.0",
     "react-collapsible-component": "^1.3.4",
