--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   ],
   "dependencies": {
     "bootswatch": "^5.2.3",
+    "esbuild-jest": "^0.5.0",
     "jsonlint-mod": "^1.7.6"
+  },
+  "devDependencies": {
+    "@testing-library/react": "^13.4.0"
   }
 }
