--- a/packages/tdb-access-control-component/package.json
+++ b/packages/tdb-access-control-component/package.json
@@ -46,11 +46,13 @@
   "dependencies": {
     "@terminusdb/terminusdb-client": "^10.0.25",
     "@terminusdb/terminusdb-react-table": "^0.0.5",
+    "babel-jest": "^29.3.1",
     "classnames": "^2.2.5",
     "date-fns": "^2.28.0",
     "react-bootstrap": "^2.7.0",
     "react-icons": "^4.3.1",
-    "react-table": "^7.0.0-rc.15"
+    "react-table": "^7.0.0-rc.15",
+    "ts-jest": "^29.0.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.4",
