--- a/packages/tdb-react-components/package.json
+++ b/packages/tdb-react-components/package.json
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "@terminusdb/terminusdb-client": "^10.0.25",
+    "babel-jest": "^29.3.1",
     "bootstrap": "^4.5.3",
     "classnames": "^2.2.5",
     "codemirror": "^5.59.1",
@@ -73,7 +74,8 @@
     "react-tooltip": "^4.2.10",
     "react-transition-group": "^4.4.1",
     "react-use-dimensions": "^1.2.1",
-    "recharts": "^1.8.5"
+    "recharts": "^1.8.5",
+    "ts-jest": "^29.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.19.1",
