--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,12 @@ packages/tdb-documents-ui/src/oneOfTypeFrames copy
 packages/tdb-documents-ui/src/oneOfTypeFrames copy2
 packages/tdb-documents-ui/src/oneOfTypeFrames copy3
 
+packages/tdb-documents-ui/mockTest
+packages/tdb-documents-ui/playground/.env
+packages/tdb-documents-ui/test/.env
+packages/tdb-documents-ui/diff/.env
+packages/tdb-documents-ui/src/pending.md
+
 *.DS_Store
 node_modules/
 lerna-debug.log
