--- a/packages/tdb-documents-ui/package.json
+++ b/packages/tdb-documents-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@terminusdb/terminusdb-documents-ui",
-  "version": "1.0.7",
+  "version": "6.0.0",
   "description": "SDK to build UI from terminusdb documents",
   "main": "src/index.js",
   "module": "es6/index",
@@ -17,7 +17,11 @@
     "cypress": "npx cypress open",
     "test": "react-scripts test"
   },
-  "jest": { "transformIgnorePatterns": [ "<rootDir>/node_modules/(?!react-dnd|dnd-core|@react-dnd)" ] },
+  "jest": {
+    "transformIgnorePatterns": [
+      "<rootDir>/node_modules/(?!react-dnd|dnd-core|@react-dnd)"
+    ]
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/terminusdb/terminusdb-documents-ui.git"
