--- a/packages/tdb-react-table/package.json
+++ b/packages/tdb-react-table/package.json
@@ -47,7 +47,9 @@
     "classnames": "^2.2.5",
     "date-fns": "^2.28.0",
     "graphql": "^16.6.0",
+    "material-ui-confirm": "^3.0.8",
     "react-apollo": "^3.1.5",
+    "react-awesome-query-builder": "^5.4.0",
     "react-bootstrap": "^2.7.0",
     "react-csv": "^2.2.2",
     "react-icon": "^1.0.0",
@@ -70,12 +72,16 @@
     "@babel/runtime": "^7.6.3",
     "babel-loader": "^8.0.0",
     "cross-env": "^7.0.3",
+    "css-loader": "^6.7.3",
     "dotenv-webpack": "^7.1.0",
     "eslint": "^8.8.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.0",
     "eslint-plugin-react": "^7.16.0",
+    "file-loader": "^6.2.0",
+    "less-loader": "^11.1.0",
+    "mini-css-extract-plugin": "^2.7.2",
     "pre-commit": "^1.1.3",
     "react-hot-loader": "^1.3.0",
     "react-router-dom": "^5.1.2",
