--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ packages/tdb-dashboard/local_file
 *.DS_Store
 
 packages/tdb-dashboard/cypress.config_local.js
+packages/tdb-dashboard/cypress.config.js
+
