--- a/packages/tdb-dashboard/package.json
+++ b/packages/tdb-dashboard/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "build-es6": "rimraf es6 && cross-env NODE_ENV=es6 babel ./src -d es6 --extensions '.js'",
     "build": "webpack --mode production",
-    "build-terminusx": "webpack --mode production --env title=TerminusX",
+    "build-terminusx": "webpack --mode production --env title=TerminusCMS",
     "start": "webpack serve --mode development  --open --progress --port 3030 --host localhost --config ./webpack_dev.config.js --history-api-fallback",
     "new": "webpack serve --mode development  --open --progress --port 3035 --host localhost --content-base src --inline --config ./webpack_dev.config.js --history-api-fallback",
     "demo": "webpack serve --progress --port 3030 --host localhost --content-base demo --inline --config demo/webpack.config.js",
