--- a/packages/tdb-documents-ui/package.json
+++ b/packages/tdb-documents-ui/package.json
@@ -71,6 +71,7 @@
     "html-webpack-plugin": "^5.5.0",
     "less-loader": "^11.0.0",
     "mini-css-extract-plugin": "^2.6.1",
+    "react-select-event": "^5.5.1",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
@@ -100,6 +101,7 @@
     "acorn": "^8.8.0",
     "babel-jest": "^29.3.1",
     "bootstrap": "^5.1.3",
+    "chroma-js": "^2.4.2",
     "codemirror": "^6.0.1",
     "cypress-plugin-snapshots": "^1.4.4",
     "dotenv": "^16.0.1",
