commit light css

--- a/packages/tdb-documents-ui/package.json
+++ b/packages/tdb-documents-ui/package.json
@@ -71,6 +71,7 @@
     "html-webpack-plugin": "^5.5.0",
     "less-loader": "^11.0.0",
     "mini-css-extract-plugin": "^2.6.1",
+    "react-datetime-picker": "^4.2.0",
     "react-select-event": "^5.5.1",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
@@ -117,6 +118,7 @@
     "react-bootstrap": "^2.7.0",
     "react-bootstrap-typeahead": "^6.0.0-alpha.9",
     "react-codemirror2": "^7.2.1",
+    "react-css-theme-switcher": "^0.3.0",
     "react-diff-viewer": "^3.1.1",
     "react-icons": "^4.3.1",
     "react-json-editor-ajrm": "^2.5.13",
