--- a/packages/tdb-access-control-component/package.json
+++ b/packages/tdb-access-control-component/package.json
@@ -49,6 +49,7 @@
     "classnames": "^2.2.5",
     "date-fns": "^2.28.0",
     "react-bootstrap": "^2.7.0",
+    "react-css-theme-switcher": "^0.3.0",
     "react-icons": "^4.3.1",
     "react-table": "^7.0.0-rc.15",
     "ts-jest": "^29.0.5"
@@ -79,6 +80,7 @@
     "less-loader": "^11.1.0",
     "mini-css-extract-plugin": "^2.7.2",
     "pre-commit": "^1.1.3",
+    "react-datetime-picker": "^4.2.0",
     "react-hot-loader": "^1.3.0",
     "react-router-dom": "^5.1.2",
     "rimraf": "^2.7.1",
