--- a/packages/tdb-dashboard/package.json
+++ b/packages/tdb-dashboard/package.json
@@ -82,6 +82,7 @@
     "react-collapsed": "^3.6.0",
     "react-collapsible-component": "^1.3.4",
     "react-color": "^2.19.3",
+    "react-css-theme-switcher": "^0.3.0",
     "react-dates": "^21.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.2.0",
@@ -121,6 +122,7 @@
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "mini-css-extract-plugin": "^2.6.1",
+    "react-datetime-picker": "^4.2.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
