--- a/packages/tdb-react-components/package.json
+++ b/packages/tdb-react-components/package.json
@@ -58,6 +58,7 @@
     "re-resizable": "^6.9.0",
     "react-bootstrap": "^2.7.0",
     "react-codemirror2": "^7.2.1",
+    "react-css-theme-switcher": "^0.3.0",
     "react-dates": "^21.8.0",
     "react-hook-form": "^6.14.1",
     "react-icons": "^3.11.0",
@@ -93,6 +94,7 @@
     "html-webpack-plugin": "^5.5.0",
     "less-loader": "^11.0.0",
     "mini-css-extract-plugin": "^2.6.1",
+    "react-datetime-picker": "^4.2.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
