--- a/packages/tdb-react-table/package.json
+++ b/packages/tdb-react-table/package.json
@@ -47,6 +47,7 @@
     "material-ui-confirm": "^3.0.8",
     "react-awesome-query-builder": "^5.4.0",
     "react-bootstrap": "^2.7.0",
+    "react-css-theme-switcher": "^0.3.0",
     "react-csv": "^2.2.2",
     "react-icon": "^1.0.0",
     "react-icons": "^4.3.1",
@@ -74,6 +75,7 @@
     "less-loader": "^11.1.0",
     "mini-css-extract-plugin": "^2.7.2",
     "pre-commit": "^1.1.3",
+    "react-datetime-picker": "^4.2.0",
     "react-hot-loader": "^1.3.0",
     "react-router-dom": "^5.1.2",
     "rimraf": "^2.7.1",
