--- a/packages/tdb-react-table/package.json
+++ b/packages/tdb-react-table/package.json
@@ -40,6 +40,8 @@
   "repository": {},
   "author": "terminusdb group",
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-awesome-query-builder/antd": "^6.1.2",
     "@react-awesome-query-builder/bootstrap": "^6.1.2",
     "@react-awesome-query-builder/ui": "^6.1.2",
@@ -52,6 +54,7 @@
     "react-icon": "^1.0.0",
     "react-icons": "^4.3.1",
     "react-table": "^7.8.0",
+    "reactstrap": "^9.1.6",
     "ts-jest": "^29.0.5"
   },
   "devDependencies": {
