--- a/packages/tdb-access-control-component/package.json
+++ b/packages/tdb-access-control-component/package.json
@@ -45,6 +45,7 @@
   "author": "terminusdb group",
   "dependencies": {
     "@terminusdb/terminusdb-client": "^10.0.28",
+    "@terminusdb/terminusdb-documents-ui-template": "^6.1.6",
     "babel-jest": "^29.3.1",
     "classnames": "^2.2.5",
     "date-fns": "^2.28.0",
