--- a/packages/tdb-documents-ui-template/package.json
+++ b/packages/tdb-documents-ui-template/package.json
@@ -72,6 +72,7 @@
     "@rjsf/validator-ajv8": "^5.0.0-beta.14",
     "@terminusdb/rjsf-core": "^4.0.5",
     "@terminusdb/terminusdb-client": "^10.0.28",
+    "@terminusdb/terminusdb-documents-ui-template": "^6.1.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
