--- a/packages/tdb-react-components/package.json
+++ b/packages/tdb-react-components/package.json
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "@terminusdb/terminusdb-client": "^10.0.28",
+    "@terminusdb/terminusdb-documents-ui-template": "^6.1.6",
     "babel-jest": "^29.3.1",
     "bootstrap": "^4.5.3",
     "classnames": "^2.2.5",
