--- a/packages/tdb-react-table/package.json
+++ b/packages/tdb-react-table/package.json
@@ -47,6 +47,7 @@
     "@react-awesome-query-builder/bootstrap": "^6.1.2",
     "@react-awesome-query-builder/ui": "^6.1.2",
     "@terminusdb/terminusdb-client": "^10.0.28",
+    "@terminusdb/terminusdb-documents-ui-template": "^6.1.6",
     "babel-jest": "^29.3.1",
     "classnames": "^2.2.5",
     "date-fns": "^2.28.0",
