--- a/packages/tdb-documents-ui-template/package.json
+++ b/packages/tdb-documents-ui-template/package.json
@@ -66,8 +66,8 @@
     "@terminusdb/terminusdb-client": "^10.0.28",
     "acorn": "^8.8.0",
     "babel-jest": "^29.3.1",
-    "codemirror-graphql": "^2.0.2",
     "bootstrap": "^5.1.3",
+    "codemirror-graphql": "^2.0.2",
     "dotenv": "^16.0.1",
     "highlight.js": "^11.6.0",
     "html-react-parser": "^3.0.4",
@@ -82,6 +82,7 @@
     "react-json-editor-ajrm": "^2.5.13",
     "react-jsonschema-form": "^1.8.1",
     "react-jsonschema-form-extras": "^0.9.67",
+    "react-leaflet-fullscreen": "^2.0.2",
     "react-markdown": "^8.0.3",
     "react-scripts": "^5.0.1",
     "react-select": "^5.2.2",
