--- a/packages/tdb-documents-ui/package.json
+++ b/packages/tdb-documents-ui/package.json
@@ -100,8 +100,6 @@
     "@uiw/react-codemirror": "^4.12.4",
     "@uiw/react-md-editor": "^3.20.2",
     "acorn": "^8.8.0",
-    "react-datetime-picker": "^4.2.1",
-    "react-date-picker": "9.2.0",
     "babel-jest": "^29.3.1",
     "bootstrap": "^5.1.3",
     "chroma-js": "^2.4.2",
@@ -122,12 +120,15 @@
     "react-calendar": "^4.2.1",
     "react-codemirror2": "^7.2.1",
     "react-css-theme-switcher": "^0.3.0",
+    "react-date-picker": "9.2.0",
+    "react-datetime-picker": "^4.2.1",
     "react-diff-viewer": "^3.1.1",
     "react-icons": "^4.3.1",
     "react-json-editor-ajrm": "^2.5.13",
     "react-jsonschema-form": "^1.8.1",
     "react-jsonschema-form-extras": "^0.9.67",
     "react-leaflet": "^3.2.5",
+    "react-leaflet-fullscreen": "^2.0.2",
     "react-markdown": "^8.0.3",
     "react-scripts": "^5.0.1",
     "react-select": "^5.2.2",
