--- a/packages/tdb-documents-ui-template/package.json
+++ b/packages/tdb-documents-ui-template/package.json
@@ -64,6 +64,7 @@
     "@rjsf/validator-ajv8": "^5.0.0-beta.14",
     "@terminusdb/rjsf-core": "^4.0.5",
     "@terminusdb/terminusdb-client": "^10.0.28",
+    "@uiw/react-textarea-code-editor": "^2.1.1",
     "acorn": "^8.8.0",
     "babel-jest": "^29.3.1",
     "bootstrap": "^5.1.3",
