--- a/packages/tdb-documents-ui/package.json
+++ b/packages/tdb-documents-ui/package.json
@@ -99,6 +99,7 @@
     "@uiw/codemirror-extensions-basic-setup": "^4.12.4",
     "@uiw/react-codemirror": "^4.12.4",
     "@uiw/react-md-editor": "^3.20.2",
+    "@uiw/react-textarea-code-editor": "^2.1.1",
     "acorn": "^8.8.0",
     "babel-jest": "^29.3.1",
     "bootstrap": "^5.1.3",
