--- a/packages/tdb-react-components/package.json
+++ b/packages/tdb-react-components/package.json
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "@terminusdb/terminusdb-client": "^10.0.28",
+    "@uiw/react-textarea-code-editor": "^2.1.1",
     "bootstrap": "^4.5.3",
     "classnames": "^2.2.5",
     "codemirror": "^5.65.12",
