--- a/packages/tdb-react-table/package.json
+++ b/packages/tdb-react-table/package.json
@@ -50,6 +50,7 @@
     "@react-awesome-query-builder/bootstrap": "^6.1.2",
     "@react-awesome-query-builder/ui": "^6.1.2",
     "@terminusdb/terminusdb-client": "^10.0.28",
+    "@uiw/react-textarea-code-editor": "^2.1.1",
     "classnames": "^2.2.5",
     "codemirror": "^6.0.1",
     "date-fns": "^2.28.0",
