add --legacy-peer-deps into build process

--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -18,7 +18,7 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: 18
-    - run: npm i
+    - run: npm i --legacy-peer-deps
     - name: Build
       if: ${{ github.ref == 'refs/heads/main' || github.event_name == 'pull_request' }}
       run: |
@@ -77,7 +77,7 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: 18
-    - run: npm i
+    - run: npm i --legacy-peer-deps
     - name: Build local dashboard
       if: ${{ github.ref == 'refs/heads/main' || github.event_name == 'pull_request' || startsWith(github.ref, 'refs/tags/v') }}
       run: |
@@ -112,7 +112,7 @@ jobs:
     - name: Build packages
       env:
         NODE_OPTIONS: --max_old_space_size=4096
-      run:  npm i && npm run build --ws
+      run:  npm i --legacy-peer-deps && npm run build --ws
     - name: Publish workspaces
       if: ${{ github.event_name != 'pull_request' && startsWith(github.ref, 'refs/tags/v') }}
       env:
