--- a/packages/tdb-access-control-component/package.json
+++ b/packages/tdb-access-control-component/package.json
@@ -45,11 +45,9 @@
   "author": "terminusdb group",
   "dependencies": {
     "@terminusdb/terminusdb-client": "^10.0.29",
-    "@uiw/react-textarea-code-editor": "^2.1.1",
     "classnames": "^2.2.5",
     "react-bootstrap": "^2.7.0",
-    "react-icons": "^4.3.1",
-    "react-leaflet-fullscreen": "^2.0.2"
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.4",
