--- a/packages/tdb-dashboard/package.json
+++ b/packages/tdb-dashboard/package.json
@@ -50,61 +50,49 @@
     "@stripe/react-stripe-js": "^1.16.4",
     "@stripe/stripe-js": "^1.46.0",
     "@terminusdb/terminusdb-client": "^10.0.29",
-    "@uiw/react-textarea-code-editor": "^2.1.1",
     "axios": "^0.21.1",
-    "babel-jest": "^29.3.1",
     "classnames": "^2.2.5",
     "codemirror": "^5.65.12",
     "codemirror-graphql": "^2.0.2",
     "console-browserify": "^1.2.0",
     "date-fns": "^2.27.0",
-    "dotenv": "^9.0.2",
-    "dotenv-webpack": "^7.0.2",
-    "file-loader": "^6.2.0",
     "graphiql": "^2.2.0",
     "graphql": "^15.8.0",
     "graphql-formatter": "^1.0.3",
     "graphql-react": "^20.0.0",
     "graphql-ws": "^5.11.2",
     "jshint": "^2.13.6",
-    "jsoneditor": "^9.9.2",
     "moment": "^2.29.1",
     "papaparse": "^5.3.0",
-    "postcss-loader": "^5.3.0",
     "prop-types": "^15.6.0",
     "re-resizable": "^6.9.9",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-bootstrap": "^2.7.0",
-    "react-codemirror2": "^7.2.1",
     "react-collapsed": "^3.6.0",
     "react-collapsible-component": "^1.3.4",
     "react-color": "^2.19.3",
-    "react-css-theme-switcher": "^0.3.0",
     "react-dates": "^21.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.2.0",
     "react-json-editor-ajrm": "^2.5.13",
     "react-json-view": "^1.21.3",
-    "react-leaflet-fullscreen": "^2.0.2",
     "react-pro-sidebar": "^0.6.0",
     "react-router-dom": "^6.3.0",
-    "react-scrollable-anchor": "^0.6.1",
     "react-select": "^4.3.1",
     "react-sidebar": "^3.0.2",
-    "react-sizeme": "^3.0.1",
     "react-split-pane": "^0.1.92",
-    "react-use-dimensions": "^1.2.1",
     "react-vertical-timeline-component": "^3.3.3",
-    "reactstrap": "^9.1.6",
-    "recharts": "^2.1.8",
-    "sass-loader": "^11.1.1",
-    "ts-jest": "^29.0.5",
-    "uuid": "^8.3.2",
-    "yup": "^0.32.11"
+    "recharts": "^2.1.8",    
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "sass-loader": "^11.1.1",
+    "ts-jest": "^29.0.5",
+    "postcss-loader": "^5.3.0",
     "@babel/core": "^7.19.1",
+    "babel-jest": "^29.3.1",
+    "dotenv": "^9.0.2",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-export-default-from": "^7.18.10",
     "@babel/plugin-transform-react-jsx": "^7.19.0",
