--- a/packages/tdb-documents-ui-template/package.json
+++ b/packages/tdb-documents-ui-template/package.json
@@ -57,16 +57,14 @@
     "webpack": "^5.75.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.0",
-    "img-loader": "^4.0.0"
+    "img-loader": "^4.0.0",
+    "@uiw/react-codemirror": "^4.12.4",
+    "@uiw/codemirror-theme-vscode": "^4.12.4"
   },
   "dependencies": {
     "@babel/runtime": "^7.20.1",
     "bootstrap": "^5.1.3",
     "react-bootstrap": "^2.7.0",
-    "@uiw/codemirror-extensions-basic-setup": "^4.12.4",
-    "@uiw/codemirror-theme-vscode":"4.19.16",
-    "@uiw/react-codemirror": "^4.12.4",
-    "codemirror": "^6.0.1",
     "graphql-formatter": "^1.0.3",
     "react-icons": "^4.3.1",
     "react-select": "^5.2.2"
