--- a/packages/tdb-react-table/package.json
+++ b/packages/tdb-react-table/package.json
@@ -43,25 +43,16 @@
   "repository": {},
   "author": "terminusdb group",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.4.0",
-    "@fortawesome/free-solid-svg-icons": "^6.3.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@react-awesome-query-builder/antd": "^6.1.2",
-    "@react-awesome-query-builder/bootstrap": "^6.1.2",
     "@react-awesome-query-builder/ui": "^6.1.2",
-    "@terminusdb/terminusdb-client": "^10.0.29",
-    "@uiw/react-textarea-code-editor": "^2.1.1",
     "classnames": "^2.2.5",
-    "codemirror": "^6.0.1",
     "date-fns": "^2.28.0",
     "react-bootstrap": "^2.7.0",
     "react-csv": "^2.2.2",
     "react-icons": "^4.3.1",
-    "react-leaflet-fullscreen": "^2.0.2",
-    "react-table": "^7.8.0",
-    "reactstrap": "^9.1.6"
+    "react-table": "^7.8.0"
   },
   "devDependencies": {
+    "@terminusdb/terminusdb-client": "^10.0.29",
     "@babel/cli": "^7.6.4",
     "@babel/core": "^7.6.4",
     "@babel/plugin-proposal-class-properties": "^7.0.0",
