--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "./packages/tdb-dashboard"
   ],
   "dependencies": {
+    "@uiw/codemirror-theme-dracula": "^4.20.2",
     "esbuild-jest": "^0.5.0",
     "jsonlint-mod": "^1.7.6"
   },
   "devDependencies": {
     "@testing-library/react": "^13.4.0"
   },
-  "overrides": {"@codemirror/state": "^6.2.0"}
+  "overrides": {
+    "@codemirror/state": "^6.2.0"
+  }
 }
