--- a/packages/tdb-documents-ui/package.json
+++ b/packages/tdb-documents-ui/package.json
@@ -70,6 +70,8 @@
     "@babel/plugin-transform-runtime": "^7.19.1",
     "@babel/preset-env": "^7.19.1",
     "@babel/preset-react": "^7.18.6",
+    "@babel/runtime": "^7.20.1",
+    "@terminusdb/terminusdb-client": "^10.0.29",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
@@ -83,38 +85,29 @@
     "dotenv-webpack": "^8.0.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "img-loader": "^4.0.0",
     "less-loader": "^11.0.0",
     "mini-css-extract-plugin": "^2.6.1",
     "react-select-event": "^5.5.1",
+    "react-test-renderer": "^17.0.2",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
     "ts-jest": "^29.0.5",
     "webpack": "^5.75.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.0",
-    "react-test-renderer": "^17.0.2",
-    "@terminusdb/terminusdb-client": "^10.0.29",
-    "img-loader": "^4.0.0"
+    "webpack-dev-server": "^4.11.0"
   },
   "dependencies": {
-    "@babel/runtime": "^7.20.1",
-    "@codemirror/commands": "^6.1.2",
-    "@codemirror/lang-html": "^6.1.3",
-    "@codemirror/lang-markdown": "^6.0.4",
-    "@codemirror/language-data": "^6.1.0",
-    "@codemirror/state": "^6.1.2",
-    "@codemirror/theme-one-dark": "^6.1.0",
-    "chroma-js": "^2.4.2",
+    "@codemirror/language-data": "^6.3.1",
     "@rjsf/core": "^5.0.0-beta.14",
     "@rjsf/utils": "^5.0.0-beta.14",
     "@rjsf/validator-ajv8": "^5.0.0-beta.14",
     "@terminusdb/rjsf-core": "^4.0.5",
-    "@uiw/react-codemirror": "^4.12.4",
-    "@uiw/react-md-editor": "^3.20.2",
-    "@uiw/react-textarea-code-editor": "^2.1.1",
+    "@uiw/react-codemirror": "^4.20.0",
+    "@uiw/react-md-editor": "^3.20.10",
     "bootstrap": "^5.1.3",
-    "codemirror": "^6.0.1",
+    "chroma-js": "^2.4.2",
     "html-react-parser": "^3.0.4",
     "leaflet": "^1.7.1",
     "leaflet-ant-path": "^1.3.0",
@@ -133,6 +126,5 @@
     "react-leaflet-fullscreen": "^2.0.2",
     "react-select": "^5.2.2",
     "uuid": "^9.0.0"
-    
   }
 }
