--- a/packages/tdb-react-components/package.json
+++ b/packages/tdb-react-components/package.json
@@ -67,6 +67,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.19.1",
+    "@uiw/codemirror-theme-vscode": "^4.20.0",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-export-default-from": "^7.18.10",
     "@babel/plugin-transform-react-jsx": "^7.19.0",
