--- a/packages/tdb-react-components/package.json
+++ b/packages/tdb-react-components/package.json
@@ -49,6 +49,7 @@
     "core-js": "^3.8.2",
     "d3": "^5.16.0",
     "date-fns": "^2.16.1",
+    "jointjs": "^3.7.3",
     "prop-types": "^15.6.0",
     "react-bootstrap": "^2.7.0",
     "react-dates": "^21.8.0",
